# shared-memory-sgd

./: .clang-format  .gitignore  .swp  0_test_laptop.csv  ASYNC_LENET_CIFAR10_n60_e200_b16_l0_005_tNONE.json  CMakeLists.txt  ELASYNC_LENET_CIFAR10_n60_e200_b16_l0_005_tNONE.txt  ELASYNC_LENET_CIFAR10_n60_e200_b16_l0_005_tNONE_i500_d50_s30.txt  ELASYNC_LENET_CIFAR10_n60_e200_b16_l0_005_tNONE_i800_d80_s30.txt  ELASYNC_LENET_CIFAR10_n60_e200_b16_l0_005_tNONE_w8_i300_d10_s30.txt  ELASYNC_LENET_CIFAR10_n60_e200_b16_l0_005_tNONE_w8_i500_d50_s30.txt  Plotting.ipynb  README.md  Session.vim  async.cpp  async.json  build.sh  cifar.cpp  clean.sh  compile-debug.sh  compile.sh  compile_commands.json  data2.json  data3.json  data4.json  data5.json  data6.json  data7.json  data8.json  elastic_ctrl.cpp  elasync.cpp  elasync.json  elasync2.cpp  elasync2.cpp.old  elasync2.json  elasync_pseudocode.txt  ema_compare_to_eval_static.txt  eval_test_static.txt  example.sh  fw_test1.txt  (+38 more)
.ipynb_checkpoints/: elastic_ctrl-checkpoint.cpp
Component/: asyncdispatcher.cpp  elasticbatchcontroller.cpp  emamonitor.cpp  evalmonitor.cpp  model_interface.cpp  modelling_controller.cpp  patterncontroller.cpp  search_controller.cpp  semisyncdispatcher.cpp  sgdthread.cpp  simplebatchcontroller.cpp  systemexecutor.cpp  threadworkerpool.cpp  window_controller.cpp  windowmonitor.cpp
accuracy_tests/: 2025-02-19_18-05-49_results.json  2025-02-19_21-37-14_results.json
cifar100_with_accuracy/: 2025-02-19_22-00-56_results.json  2025-02-19_22-09-57_results.json  2025-02-19_22-28-18_results.json  2025-02-19_22-52-59_results.json  2025-02-19_23-25-42_results.json  2025-02-20_00-14-35_results.json  2025-02-20_01-14-46_results.json  2025-02-20_01-44-16_results.json  2025-02-20_02-15-24_results.json  2025-02-20_03-05-56_results.json  2025-02-20_03-49-57_results.json  2025-02-20_04-22-42_results.json  2025-02-20_04-27-49_results.json  2025-02-20_04-36-50_results.json  2025-02-20_04-55-10_results.json  2025-02-20_05-19-53_results.json  2025-02-20_05-52-38_results.json  2025-02-20_06-41-33_results.json  2025-02-20_07-41-45_results.json  2025-02-20_08-12-53_results.json  2025-02-20_08-44-01_results.json
cifar100_yprobe/: 2025-02-18_20-45-54_results.json  2025-02-18_20-55-54_results.json  2025-02-18_21-05-54_results.json
debugging/: elasync_backup.cpp  elasync_edited_for_normal.cpp
experiments/: 04-04-2024_13-56-54_LENET_ELASYNC_CIFAR10_datacoll-1.json  04-04-2024_14-06-49_LENET_ELASYNC_CIFAR10_datacoll-1.json  04-04-2024_14-09-16_LENET_ELASYNC_CIFAR10_datacoll-3.json  04-04-2024_14-16-09_LENET_ELASYNC_CIFAR10_datacoll-4.json  05-04-2024_15-00-00_LENET_HEURISTIC_CIFAR10_linear-7.5e-05-#0.json  05-04-2024_15-03-10_LENET_HEURISTIC_CIFAR10_linear-7.5e-05-#1.json  05-04-2024_15-06-18_LENET_HEURISTIC_CIFAR10_linear-7.5e-05-#2.json  05-04-2024_15-09-28_LENET_HEURISTIC_CIFAR10_linear-7.5e-05-#3.json  05-04-2024_15-12-37_LENET_HEURISTIC_CIFAR10_linear-7.5e-05-#4.json  05-04-2024_15-15-48_LENET_HEURISTIC_CIFAR10_linear-7.5e-05-#5.json  05-04-2024_15-18-58_LENET_HEURISTIC_CIFAR10_linear-7.5e-05-#6.json  05-04-2024_15-22-12_LENET_HEURISTIC_CIFAR10_linear-7.5e-05-#7.json  05-04-2024_15-25-21_LENET_HEURISTIC_CIFAR10_linear-7.5e-05-#8.json  (+83 more)
include/: cifar100_reader.hpp  (+2 more)
(+278 files in other folders)
